tests/sksl/errors/MatrixToVectorCastInteger.glsl
### Compilation failed:

error: 4: invalid argument to 'int' constructor (expected a number or bool, but found 'half2x2')
error: 5: 'half2x2' is not a valid parameter to 'int2' constructor
error: 6: 'half2x2' is not a valid parameter to 'int3' constructor
3 errors
